# pokemon-generator

./: .gitignore  README.md  calc_z_dist.ipynb  fid.csv  pyproject.toml  requirements.txt  stats.ipynb
src/: calc_fid.py  main.py
src/aegan/: aegan.py  discriminator_image.py  discriminator_latent.py  encoder.py  generator.py  stat.py
src/sde/: model.py  sde.py
